force-app/main/default/objects/CX_Gift__c/CX_Gift__c.object-meta.xml
<CustomObject>
    <label>CX Gift</label>
    <nameField>
        <label>Gift</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CX Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>