force-app/main/default/objects/CX_Gift__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CX Gifts</relationshipLabel>
    <relationshipName>CX_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>