force-app/main/default/objects/CX_Gift__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CX Gifts</relationshipLabel>
    <relationshipName>CX_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>