force-app/main/default/objects/CX_Gift__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CX Gifts</relationshipLabel>
    <relationshipName>CX_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>