force-app/main/default/objects/CX_Gift__c/fields/Occasion__c.field-meta.xml
<CustomField>
    <fullName>Occasion__c</fullName>
    <label>Occasion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occasion</valueSetName>
    </valueSet>
</CustomField>